--- a/app/views/pubmed_report_mailer/pubmed_report_email.html.erb
+++ b/app/views/pubmed_report_mailer/pubmed_report_email.html.erb
@@ -6,61 +6,66 @@
   <meta charset="UTF-8">
 </head>
 <body>
-  <p style="font-size: 16px; margin-bottom: 10px;">
-    <%= @report[:headers][:reporting_message] %>
-  </p>
+<p style="font-size: 16px; margin-bottom: 10px;">Reporting publications from Pubmed Ingest on <strong><%= @report[:formatted_time] %></strong></p>
 
   <p style="font-size: 16px; margin-bottom: 10px;">
-    <strong>Depositor:</strong> <%= @report[:headers][:depositor] %>
-  </p>
+  <strong>Depositor: </strong><%= @report[:headers][:depositor] %>
+</p>
 
-  <p style="font-size: 16px; margin-bottom: 10px;">
-    <strong>Total Unique Files:</strong> <%= @report[:headers][:total_unique_files] %>
-  </p>
+<p style="font-size: 16px; margin-bottom: 10px;">
+  <strong>Total Unique Files: </strong><%= @report[:headers][:total_unique_files] %>
+</p>
 
-  <p style="font-size: 16px; margin-bottom: 10px;">
-    <strong>Successfully Attached:</strong> <%= @report[:headers][:successfully_attached] %>
-  </p>
+<p style="font-size: 16px; margin-bottom: 10px;">
+  <strong>File Retrieval Directory: </strong>"<%= @report[:file_retrieval_directory] %>"
+</p>
 
-  <p style="font-size: 16px; margin-bottom: 10px;">
-    <strong>Successfully Ingested:</strong> <%= @report[:headers][:successfully_ingested] %>
-  </p>
+<!-- Generate tables for each record category -->
+<% {
+  successfully_attached: 'Successfully Attached',
+  skipped: 'Skipped',
+  failed: 'Failed'
+}.each do |key, label| %>
 
-   <p style="font-size: 16px; margin-bottom: 10px;">
-    <strong>Target Directory:</strong> <%= @report[:headers][:target_directory] %>
-  </p>
+  <h2 style="font-size: 20px; margin-bottom: 10px; margin-top: 30px;">
+    <%= label %>: <%= @report[:records][key].size %> Files
+  </h2>
 
-<h2 style="font-size: 20px; margin-bottom: 10px;"><%= @report[:records][:successfully_attached] %></h2>
   <table style="width: 100%; border-collapse: collapse;">
     <thead>
       <tr>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 30%;">Title</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 20%;">Dimensions ID</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 30%;">URL</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 5%;">PDF Attached</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 5%;">PDF Link</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 15%;">Error</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 18%;">Filename</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 18%;">CDR URL</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 10%;">DOI</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 10%;">PMID</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 10%;">PMCID</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 27%;">Ingest/Attachment Result</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 5%;">Pre-existing File?</th>
       </tr>
     </thead>
     <tbody>
-      <% @report[:successfully_ingested_rows].each_with_index do |publication, index| %>
+      <% @report[:records][key].each_with_index do |record, index| %>
         <tr style="background-color: <%= index.even? ? '#f9f9f9' : '#ffffff' %>;">
-          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><%= publication[:title] %></td>
-          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><%= publication[:id] %></td>
-          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><a href="<%= publication[:url] %>"><%= publication[:url] %></a></td>
-          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><%= publication[:pdf_attached] %></td>
-          <!-- Render PDF Link Text Conditionally -->
+          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><%= record['file_name'] %></td>
           <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;">
-            <% if publication[:linkout].blank? %>
-              N/A
+            <% if record['cdr_url'].present? %>
+              <a href="<%= record['cdr_url'] %>"><%= record['cdr_url'] %></a>
             <% else %>
-              <a href="<%= publication[:linkout].gsub('"', '\"') %>">Link</a>
+              N/A
             <% end %>
           </td>
-          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;">N/A</td>
+          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><%= record['doi'] || 'NONE' %></td>
+          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><%= record['pmid'] || 'NONE' %></td>
+          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><%= record['pmcid'] || 'NONE'%></td>
+          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><%= record['pdf_attached'] %></td>
+          <td style="border: 2px solid #dddddd; text-align: center; padding: 10px;">
+            <%= record['has_fileset'].to_s.downcase.strip == 'true' ? '✔' : '✘' %>
+          </td>
         </tr>
       <% end %>
     </tbody>
   </table>
+
+<% end %>
 </body>
 </html>
